styles.css
/* ... */
.mail_toolbar .mail_menu_action_separator,
.mail_toolbar .mail_menu_label_separator {
    display: block;
    border-top: 1px solid #bbb;
    margin: 0.4em 0;
}

.mail_toolbar .mail_menu_options,
.mail_toolbar .mail_menu_actions,
.mail_toolbar .mail_menu_labels {
    list-style: none;
    margin: 0.5em 0;
}

.mail_toolbar .mail_menu_options li,
.mail_toolbar .mail_menu_actions li,
.mail_toolbar .mail_menu_labels li {
    margin: 0.1em 0;
    padding: 0;
    max-width: 100%;
    white-space: nowrap;
}

.mail_toolbar .mail_menu_options li:hover,
.mail_toolbar .mail_menu_actions li:hover,
.mail_toolbar .mail_menu_labels li:hover {
    background-color: #f1f1f1;
    cursor: pointer;
}

.mail_toolbar .mail_menu_labels .mail_adv_checkbox{
    display: inline-block;
    margin: 0 0.5em 0 0.1em;
}

.mail_toolbar .mail_menu_labels .mail_label_name{
    display: inline-block;
    width: 80%;
}

.mail_toolbar .mail_button span {
    display: inline-block;
    vertical-align: middle;
    margin-right: 4px;
}

.mail_toolbar .mail_button:before {
    content: "";
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}

.mail_toolbar .mail_button,
.mail_toolbar_down .mail_button {
    display: inline-block;
    background-color: #f1f1f1;
    margin: 0.4em 0.5em 0 0;
    padding: 0.4em 1em;
    border: 1px solid #ccc;
    border-radius: 0.2em;
    text-align: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
    font-size: 1em;
    height: 2.4em;
    width: auto;
    vertical-align: middle;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}

.mail_toolbar .mail_button_disabled,
.mail_toolbar_down .mail_button_disabled {
    color: grey;
}

.mail_toolbar .mail_button:hover,
.mail_toolbar_down .mail_button:hover {
    border: 1px solid #aaa;
    box-shadow: rgba(0, 0, 0, 0.10) 0px 1px 1px 0px;
}

.mail_toolbar input.mail_button[disabled]:hover,
.mail_toolbar .mail_button.mail_button_disabled:hover,
.mail_toolbar_down input.mail_button[disabled]:hover,
.mail_toolbar_down .mail_button.mail_button_disabled:hover {
    border: 1px solid #ccc;
    box-shadow: 0px 0px 0px #000;
}

.mail_toolbar_sep {
    margin-left: 3em;
}

.mail_toolbar a {
    display: block;
    color: #000;
    padding: 0.1em 2em;
}

.mail_toolbar_label {
    display: inline-block;
    height: 2.4em;
}

/* Search */

.mail_menu_search {
    padding: 0 0.5em 0.5em;
}

.mail_menu_search input[name="textsearch"],
.mail_menu_search input[name="textsearchfrom"],
.mail_menu_search input[name="textsearchto"] {
    margin: 0.4em 0;
    border: 1px solid #ccc;
    padding: 0 1em;
    border-radius: 0.2em;
    height: 2.3em;
    width: 26em!important;
}

.mail_search_date {
    display: inline-block;
    margin: 0.4em 0;
    border: 1px solid #ccc;
    padding: 0 1em;
    border-radius: 0.2em;
    height: 2.3em;
    width: 6em;
    cursor: pointer;
}

.mail_search_date img,
.mail_search_date span {
    vertical-align: middle;
}

.mail_button_cancel_search {
    float: left;
}

.mail_button_search {
    float: right;
}

.mail_button_searching {
    font-weight: bold;
}

.mail_paging .singlebutton {
    min-width: 1em;
}

.mail_paging span {
    vertical-align: middle;
}

.mail_paging .singlebutton:nth-child(2) {
    border-radius: 0.2em 0 0 0.2em;
    margin-right: 0px;
}

.mail_paging .singlebutton:last-child {
    border-radius: 0 0.2em 0.2em 0;
}

.mail_perpage {
    float: right;
    margin-top: 0.5em;
}

.mail_buttons {
    float: left;
 }

.mail_perpage span{
    margin: 0 0.5em;
}

/* Notification bar */

.mail_notification {
    margin: 0.5em 0;
}

#mail_notification_undo,
#mail_notification_search {
    margin-left: 1em;
}

/* View mail */


.mail_subject {
    margin-bottom: 1em;
}

.mail_subject .mail_flags {
    margin-left: 0.5em;
    vertical-align:middle;
}

.mail_subject h3 {
    display:inline;
}

.mail_header {
    display:block;
}

.mail_info {
    margin-left: 43px;
}

.mail_info .mail_date {
    float: right;
}

.mail_header {
    margin-botton: 1em;
}

.mail_header .left,
.mail_subject .left {
    float: left;
}

.user_from {
    font-size: 1.1em;
    font-weight: bold;
}

.mail_recipients {
    border-bottom: 1px solid #aaa;
    font-size: 0.95em;
}

.mail_recipients .mail_role {
    display: inline-block;
    min-width: 1.5em;
    margin-right: 0.5em;
}

.mail_body {
    margin-left: 43px;
}

.mail_content {
    margin: 1em 0 0.2em;
    border-bottom: 2px solid #aaa;
}

.mail_attachments {
    margin: 1em 0 0.5em;
    border-top: 1px solid #aaa;
    width: 50%;
}

.mail_attachment {
    margin: 0.5em 0 0.5em 1em;
    display: block;
}

.mail_attachment_size {
    margin-left: 1em;
}

.mail_attachment_text {
    margin-left: 0.5em;
    font-weight: bold;
}

.mail_attachment_downloadall {
    float: right;
}

.mail_downloadall_text {
    vertical-align: middle;
}

/* Mail reply */

.mail_reply .mail_header {
    margin-top: 1em;
}

.mail_reply .mail_info .mail_date {
    float: none;
    display: block;
}

/* Mail references */

.mail_references {
    margin: 1em 0 0 43px;
}

.mail_references .mail_header {
    margin-top: 1em;
}

.mail_references .mail_info .mail_date {
    float: none;
    display: block;
}

/* Label colors */

.mail_label {
    background-color: #eee;
    padding: 0.2em 0.4em;
    margin: 0 0.1em;
    border-radius: 0.4em;
}

.mail_label_colors_row {
    clear: left;
    width: 100%;
    text-align: center;
}

.mail_label_color {
    float: left;
    width: 20px;
    height: 20px;
}

.mail_label_color_selected {
    text-transform: uppercase;
    -ms-transform: scale(1.2, 1.2);
    -webkit-transform: scale(1.2, 1.2);
    transform: scale(1.2, 1.2);
}

.mail_label_colors .mail_label_color:hover {
    cursor: pointer;
    -ms-transform: scale(1.2, 1.2);
    -webkit-transform: scale(1.2, 1.2);
    transform: scale(1.2, 1.2);
}
/* ... */

