Fixed button's text vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -488,7 +488,6 @@
 
 .mail_toolbar .mail_button span {
     display: inline-block;
-    vertical-align: middle;
     margin-right: 4px;
 }
 
